Fixing form flag on ios devices

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -91,6 +91,6 @@
     }
 
     > *:last-child {
-        flex-shrink: 1;
+        flex-shrink: 0;
     }
 }
